5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1791_1602.log
== TEST (2019-05-29 14:04:40) 
-- CODE:
from numpy import*
v=array(input(":")
print(v)

-- ERROR:
File "XXXX", line 3
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:50) 
-- CODE:
from numpy import*
v=array(input(":")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:04:51) 
-- CODE:
from numpy import*
v=array(input(":")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:00) 
-- CODE:
from numpy import*
v=array(input("v=")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:05:03) 
-- CODE:
from numpy import*
v=array(input("v=")


-- EXECUTION TIME:
0.201527
-- ERROR:
  File "/home/codebench/codes/1791/1602/main.py", line 4
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:03) 
-- CODE:
from numpy import*
v=array(input("v=")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:12) 
-- CODE:
from numpy import*
v= array(input("v=")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:06:28) 
-- CODE:
from numpy import*
v= array(eval(input("v=")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:06:40) 
-- CODE:
from numpy import*
v= array(eval(input("v=")))
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:07:48) 
-- CODE:
from numpy import*
v= array(eval([9]))
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:04) 
-- CODE:
from numpy import*
v= array(eval(input([9])))
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:23) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:55) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=9


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:44) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( v > 0) and (v < 9):
print(v)
	

-- ERROR:
File "XXXX", line 5
    print(v)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:46) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( v > 0) and (v < 9):
print(v)
	

-- ERROR:
File "XXXX", line 5
    print(v)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:12:47) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( v > 0) and (v < 9):
print(v)
	

-- EXECUTION TIME:
0.142516
-- ERROR:
  File "/home/codebench/codes/1791/1602/main.py", line 5
    print(v)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:06) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( a > 0) and (a < 9):
print	(v)

-- ERROR:
File "XXXX", line 5
    print	(v)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:10) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( a > 0) and (a < 9):
print	(a)

-- ERROR:
File "XXXX", line 5
    print	(a)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:15) 
-- CODE:
from numpy import*
v= array(eval(input(" :")))
a=0
while( a > 0) and (a < 9):
print\

-- ERROR:
File "XXXX", line 5
    print\
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
